<resources>
    <string name="app_name">Cryptocurrency Price Tracker App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_now">Register Now</string>
    <string name="send_mail">Send mail</string>
    <string name="btc">BTC</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="description">Description</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="markets">Markets</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="favorites">Favorites</string>
    <string name="change_password">Change Password</string>
    <string name="created_by_name">by Yunus Bedir</string>
    <string name="user">User</string>
</resources>