<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_markets">

    <navigation
        android:id="@+id/navigation_markets"
        app:startDestination="@+id/marketsFragment">

        <fragment
            android:id="@+id/marketsFragment"
            android:name="com.yunusbedir.cryptocurrencypricetrackerapp.ui.main.ui.markets.MarketsFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_markets" />
    </navigation>

    <navigation
        android:id="@+id/navigation_dashboard"
        app:startDestination="@+id/dashboardFragment">

        <fragment
            android:id="@+id/dashboardFragment"
            android:name="com.yunusbedir.cryptocurrencypricetrackerapp.ui.main.ui.dashboard.DashboardFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_dashboard" />
    </navigation>

    <navigation
        android:id="@+id/navigation_notifications"
        app:startDestination="@+id/notificationFragment">

        <fragment
            android:id="@+id/notificationFragment"
            android:name="com.yunusbedir.cryptocurrencypricetrackerapp.ui.main.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications" />
    </navigation>

    <fragment
        android:id="@+id/coinDetailFragment"
        android:name="com.yunusbedir.cryptocurrencypricetrackerapp.ui.coin.coindetail.CoinDetailFragment"
        android:label="fragment_coin_detail"
        tools:layout="@layout/fragment_coin_detail">
        <argument
            android:name="id"
            app:argType="string" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <action
        android:id="@+id/action_global_coinDetailFragment"
        app:destination="@id/coinDetailFragment" />
</navigation>