<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding24"
    tools:context=".ui.userauthentication.login.LoginFragment">

    <ImageView
        android:id="@+id/login_icon_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin24"
        android:src="@drawable/ic_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin24"
        android:gravity="center"
        android:text="Cryptocurrency Price Tracker App"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_icon_image_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email_text_input_layout"
        style="@style/MyTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:hint="@string/e_mail"
        app:layout_constraintTop_toBottomOf="@id/login_title_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_email_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_mail_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/send_mail"
        app:layout_constraintTop_toBottomOf="@id/user_email_text_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/send_mail_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="by Yunus Bedir"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>